gh pages & Cw1 done

--- a/Cw1/index.html
+++ b/Cw1/index.html
@@ -7,11 +7,18 @@
     <title>Wizytówka</title>
 </head>
 <body>
-    <header>NAGŁÓWEK</header>
-    <nav>NAWIGACJA</nav>
-    <main>CONTENT</main>
-    <header>NAGŁÓWEK AUTONOMICZNEJ CZĘŚCI STRONY</header>
-    <section>TEMATYCZNIE ZGRUPOWANY KONTENT></section>
-    <footer>STOPKA</footer>
+    <header>NAGŁÓWEK
+    </header>
+    <nav>NAWIGACJA
+    </nav>
+<main>CONTENT</main>
+    <article>
+        <header>NAGŁÓWEK AUTONOMICZNEJ CZĘŚCI STRONY
+        </header>
+    </article>
+    <section>TEMATYCZNIE ZGRUPOWANY KONTENT>
+    </section>
+    <footer>STOPKA
+    </footer>
 </body>
 </html>
