--- a/Cw1/index.html
+++ b/Cw1/index.html
@@ -16,7 +16,7 @@
         <header>NAGŁÓWEK AUTONOMICZNEJ CZĘŚCI STRONY
         </header>
     </article>
-    <section>TEMATYCZNIE ZGRUPOWANY KONTENT>
+    <section>TEMATYCZNIE ZGRUPOWANY KONTENT
     </section>
     <footer>STOPKA
     </footer>
