dodanie listy i tabelki

--- a/Cw1/index.html
+++ b/Cw1/index.html
@@ -15,8 +15,32 @@
     <article>
         <header>NAGŁÓWEK AUTONOMICZNEJ CZĘŚCI STRONY
         </header>
+        <table border=""1">
+            <tr>
+                <th>Nazwa</th>
+                <th>Ocena</th>
+            </tr>
+
+            <tr>
+                <td>HTML</td>
+                <td>⭐⭐⭐⭐⭐</td>
+            </tr>
+            <tr>
+                <td>INNE</td>
+                <td>⭐⭐⭐⭐⭐</td>
+            </tr>
+        </table>
     </article>
-    <section>TEMATYCZNIE ZGRUPOWANY KONTENT
+    <section>
+        <header>
+        TEMATYCZNIE ZGRUPOWANY KONTENT
+        </header>
+       
+        <ol>
+            <li>element 1</li>
+            <li>element 2</li>
+            <li>element 3</li>
+         </ol>   
     </section>
     <footer>STOPKA
     </footer>
