--- a/Cw1/index.html
+++ b/Cw1/index.html
@@ -11,10 +11,18 @@
     </header>
     <nav>NAWIGACJA
     </nav>
-<main>CONTENT</main>
+<main>CONTENT
+
+</main>
     <article>
         <header>NAGŁÓWEK AUTONOMICZNEJ CZĘŚCI STRONY
+                <img src="https://www.w3schools.com/w3css/img_avatar3.png" 
+                alt="user image"
+                width="250px"
+                height="250px"
+                />
         </header>
+    
         <table border=""1">
             <tr>
                 <th>Nazwa</th>
@@ -23,14 +31,15 @@
 
             <tr>
                 <td>HTML</td>
-                <td>⭐⭐⭐⭐⭐</td>
+                <td>⭐⭐</td>
             </tr>
             <tr>
                 <td>INNE</td>
-                <td>⭐⭐⭐⭐⭐</td>
+                <td>⭐⭐⭐</td>
             </tr>
         </table>
     </article>
+    
     <section>
         <header>
         TEMATYCZNIE ZGRUPOWANY KONTENT
@@ -42,6 +51,11 @@
             <li>element 3</li>
          </ol>   
     </section>
+    <h2>napisz wiadomść</h2>
+    <form>
+        <input type="text" placeholder="email">
+        <textarea name="text" id="" cols="30" rows="10"></textarea>
+    </form>
     <footer>STOPKA
     </footer>
 </body>
