--- a/Cw1/index.html
+++ b/Cw1/index.html
@@ -7,7 +7,7 @@
     <title>Wizytówka</title>
 </head>
 <body>
-    <header>NAGŁÓWEK
+    <header><h1>NAGŁÓWEK</h1>
     </header>
     <nav>NAWIGACJA
     </nav>
@@ -15,7 +15,7 @@
 
 </main>
     <article>
-        <header>NAGŁÓWEK AUTONOMICZNEJ CZĘŚCI STRONY
+        <header><h2>NAGŁÓWEK AUTONOMICZNEJ CZĘŚCI STRONY</h2>
                 <img src="https://www.w3schools.com/w3css/img_avatar3.png" 
                 alt="user image"
                 width="250px"
