--- a/Cw1/index.html
+++ b/Cw1/index.html
@@ -51,7 +51,7 @@
             <li>element 3</li>
          </ol>   
     </section>
-    <h2>napisz wiadomść</h2>
+    <h2>napisz wiadomość</h2>
     <form>
         <input type="text" placeholder="email">
         <textarea name="text" id="" cols="30" rows="10"></textarea>
