--- a/Cw1/index.html
+++ b/Cw1/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wizytówka</title>
+    <title>Wizytówka</title>~
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header><h1>NAGŁÓWEK</h1>
@@ -52,7 +53,8 @@
          </ol>   
     </section>
     <h2>Napisz wiadomość</h2>
-    <form>
+    <form class="messageForm
+    ">
         <input type="text" placeholder="email">
         <textarea name="text" id="" cols="30" rows="10"></textarea>
     </form>
