--- a/Cw1/index.html
+++ b/Cw1/index.html
@@ -34,6 +34,7 @@
             </table>      
         <section>
             <h2>TEMATYCZNIE ZGRUPOWANY KONTENT</h2>
+            
             <ol>
                 <li>PROJEKT 1</li>
                 <li>PROJEKT 2</li>
@@ -45,7 +46,7 @@
         <h3>Napisz wiadomość</h3>
         <form class="messageForm">
             <input type="text" placeholder="Twoje imię">
-            <textarea cols="30" rows="10" placeholder="Twoja wiadomość"></textarea>
+            <textarea cols="30" rows="10" placeholder=></textarea>
             <input type="submit" value="Wyślij">
         </form>
     </article>
