--- a/Cw1/index.html
+++ b/Cw1/index.html
@@ -24,9 +24,13 @@
             height="240px">
             <table border="1">
                 <tr>
+                    <th>Nazwa</th>
+                    <th>Ocena</th>
+                </tr>
+                <tr>    
                     <td>HTML</td>
                     <td>⭐⭐</td>
-                </tr>
+                
                 <tr>
                     <td>OTHER</td>
                     <td>⭐⭐⭐</td>
