--- a/Cw1/index.html
+++ b/Cw1/index.html
@@ -23,18 +23,24 @@
             width="240px"
             height="240px">
             <table border="1">
-                <tr>
-                    <th>Nazwa</th>
-                    <th>Ocena</th>
-                </tr>
-                <tr>    
-                    <td>HTML</td>
-                    <td>⭐⭐</td>
-                
-                <tr>
-                    <td>OTHER</td>
-                    <td>⭐⭐⭐</td>
-                </tr>
+                <thead>
+                    <tr>
+                        <th>Nazwa</th>
+                        <th>Ocena</th>
+                    </tr>
+
+                </thead>
+                <tbody>
+                    <tr>    
+                        <td>HTML</td>
+                        <td>⭐⭐</td>
+                    
+                    <tr>
+                        <td>OTHER</td>
+                        <td>⭐⭐⭐</td>
+                    </tr>
+
+                </tbody>
             </table>      
         <section>
             <h2>TEMATYCZNIE ZGRUPOWANY KONTENT</h2>
