--- a/Cw1/index.html
+++ b/Cw1/index.html
@@ -19,7 +19,8 @@
         <!-- CONTENT -->
         <article class="topArticle">
                 <h2>NAGŁOWEK AUTONOMICZNEJ CZĘŚCI STRONY</h2>
-            <img src="https://www.w3schools.com/w3css/img_avatar3.png" alt="awatar"
+            <img src="https://www.w3schools.com/w3css/img_avatar3.png" 
+            alt="awatar"
             width="240px"
             height="240px">
             <table border="1">
@@ -53,7 +54,7 @@
         </article>
         </section>
         <article class="bottomArticle">
-        <h3>Napisz wiadomość</h3>
+        <h3>Napisz wiadomość</h3> 
         <form class="messageForm">
             <input type="text" placeholder="Twoje imię">
             <textarea cols="30" rows="10" placeholder=></textarea>
