--- a/cw3/index.html
+++ b/cw3/index.html
@@ -20,7 +20,7 @@
       <picture>
         <source media="(max-width: 768px)" srcset="./images/image-product-mobile.jpg">
         <source media="(min-width: 768px)" srcset="./images/image-product-descktop.jpg">
-        <img src="OtherImage.png" alt="Gabrielle Essence Eau De Parfum">
+        <img src="./images/image-product-mobile.jpg" alt="Gabrielle Essence Eau De Parfum">
     </picture>
      
 
